--- a/src/main/webapp/i18n/en/tutorExerciseDashboard.json
+++ b/src/main/webapp/i18n/en/tutorExerciseDashboard.json
@@ -46,7 +46,9 @@
             "exerciseInformation": "Exercise information",
             "numberOfTotalSubmissions": "Total submissions",
             "numberOfAssessedSubmissions": "Assessed submissions",
-            "numberOfSubmissionsAssessedByYou": "Submissions assessed by you"
+            "numberOfSubmissionsAssessedByYou": "Submissions assessed by you",
+            "openNextNotAssessedSubmission": "Open next unassessed submission",
+            "NoUnassessedSubmissions": "There are no unassessed submissions"
         }
     }
 }
